objects/DocuSign__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedUserTempalteId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AuthorizedUserTempalteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControlPersonTemplateId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ControlPersonTemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IntegratorKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassWord__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PassWord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBO_Nested_Template_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UBO Nested Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBO_Template_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UBO Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign</label>
</CustomObject>